<?xml version="1.0" encoding="UTF-8" standalone="no"?>
<resources>
    <string name="app_name">dzig</string>
    <string name="last_seen_message">last seen %1$s</string>


    <string name="login_login_label">Login</string>
    <string name="login_password_label">Password</string>
    <string name="login_remember_me_label">Remember me</string>
    <string name="login_sign_in_button">Sign in</string>
    <string name="login_register">Register</string>
    <string name="login_incognito_button">Incognito</string>

    <string name="btn_ok">Ok</string>
    <string name="btn_cancel">Cancel</string>
	<string name="btn_legend">Legend</string>
    
    
    <string name="dialog_account_title">Select account</string>
    <string name="dialog_progress_message">Please wait...</string>


    <string name="menu_refresh">Refresh</string>
    <string name="menu_search">Search</string>
    <string name="menu_share">Share</string>
    <string name="menu_settings">Settings</string>



    <string name="prefs_category_location">Location</string>
    <string name="prefs_category_location_desc">Location update settings</string>

    <string name="prefs_category_mock">Mock</string>
    <string name="prefs_category_mock_desc">Test header</string>

    <string name="prefs_location_background_key">prefs_location_background</string>
    <string name="prefs_location_interval_key">prefs_location_interval</string>
    <string name="prefs_location_distance_key">prefs_location_distance</string>

    <string name="prefs_location_background">Work in background</string>
    <string name="prefs_location_interval">Update Interval (sec)</string>
    <string name="prefs_location_distance">Minimum distance (m)</string>



</resources>
