<?xml version="1.0" encoding="utf-8"?>

<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <CheckBoxPreference
            android:key="@string/prefs_location_background_key"
            android:title="@string/prefs_location_background"
            android:defaultValue="false"/>

    <EditTextPreference
            android:key="@string/prefs_location_interval_key"
            android:title="@string/prefs_location_interval"
            android:inputType="numberDecimal"
            android:gravity="right"
            android:defaultValue="900000"/>

    <EditTextPreference
            android:key="@string/prefs_location_distance_key"
            android:title="@string/prefs_location_distance"
            android:inputType="numberDecimal"
            android:gravity="right"
            android:defaultValue="75"/>
</PreferenceScreen>